--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,7 @@ ul {
     background-position: center;
     padding: 188px 0;
     max-width: 1440px;
+    margin: 0 auto;
 }
 
 .banner-header {
