--- a/css/styles.css
+++ b/css/styles.css
@@ -478,6 +478,10 @@ ul {
 
 /* footer-social */
 
+.footer-soc-container {
+    margin-right: 80px;
+}
+
 .footer-soc-title {
     color: #FFF;
     font-size: 16px;
@@ -524,6 +528,63 @@ ul {
 
 .footer-logo-container {
     margin-right: 120px;
+}
+
+.footer-input-container {}
+
+.footer-input-paragraph {
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+.footer-form {
+    display: flex;
+    gap: 24px;
+}
+
+.footer-label {}
+
+.footer-input {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    color: #ffffff;
+
+}
+
+.footer-form-btn {
+    color: #FFFFFF;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+}
+
+.footer-input-icon {
+    margin-left: 16px;
+    fill: #ffffff;
 }
 
 /* modal-window-styles */
