--- a/css/styles.css
+++ b/css/styles.css
@@ -597,6 +597,16 @@ ul {
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
+}
+
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 }
 
 .modal-window {
@@ -697,10 +707,6 @@ ul {
 
 }
 
-/* .label-icon:focus {
-    fill: #4D5AE5;
-} */
-
 .label-icon {
     position: absolute;
     left: 16px;
@@ -733,20 +739,23 @@ ul {
     border-color: #4D5AE5;
 }
 
-.checkbox-container {
-    margin-bottom: 24px;
-}
-
-.checkbox-input {}
-
-.checkbox-text {
+.check-text {
+    color: #8E8F99;
     font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    color: #8E8F99;
+    display: flex;
+    align-items: center;
 }
 
-.checkbox-text-span {
+.check-text a {
+    color: #4D5AE5;
+    text-decoration-line: underline;
+}
+
+.user-span {
     width: 16px;
     height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.4);
@@ -755,19 +764,18 @@ ul {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    fill: transparent;
+    /* fill: transparent; */
     margin-right: 8px;
+
 }
 
-input[type="checkbox"]:checked+.checkbox-text-span {
-    background-color: #404bbf;
+.form-check:checked+.check-text .user-span {
+    background-color: #404BBF;
     border: none;
-    fill: #F4F4FD;
+    fill: #f4f4fd;
 }
 
-.modal-link {
-    color: #4D5AE5
-}
+.check-icon {}
 
 .form-btn {
     display: block;
