--- a/css/styles.css
+++ b/css/styles.css
@@ -750,7 +750,7 @@ ul {
     align-items: center;
 }
 
-.check-text a {
+.check-text .check-link {
     color: #4D5AE5;
     text-decoration-line: underline;
 }
@@ -764,7 +764,7 @@ ul {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    /* fill: transparent; */
+    fill: transparent;
     margin-right: 8px;
 
 }
