--- a/css/styles.css
+++ b/css/styles.css
@@ -719,6 +719,10 @@ ul {
     margin-bottom: 16px;
 }
 
+.check-form-container {
+    margin-bottom: 24px;
+}
+
 .form-textarea {
     width: 100%;
     height: 120px;
@@ -746,8 +750,6 @@ ul {
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    display: flex;
-    align-items: center;
 }
 
 .check-text .check-link {
